bug fix for wrapping

--- a/FrontEnd/src/styles/styles.scss
+++ b/FrontEnd/src/styles/styles.scss
@@ -112,3 +112,20 @@ h2 {
   width: 100px;
   text-align: left;
 }
+
+.wrap {
+  white-space: normal !important;
+  // These are technically the same, but use both.
+  overflow-wrap: break-word !important;
+  word-wrap: break-word !important;
+  -ms-word-break: break-all !important;
+  // This is the dangerous one in WebKit, as it breaks things wherever.
+  word-break: break-all !important;
+  // Instead use this non-standard one.
+  word-break: break-word !important;
+  // Adds a hyphen where the word breaks, if supported (No Blink).
+  -ms-hyphens: auto !important;
+  -moz-hyphens: auto !important;
+  -webkit-hyphens: auto !important;
+  hyphens: auto !important;
+}
